finished the booking API
